--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <label for="colorCount">Enter number of colors (2–49):</label>
         <input id="colorCount" type="number" min="2" max="49" value="5" />
         <button id="generateColors">Generate</button>
+        <div id="errorMessage"></div>
         <div id="colorDisplay"></div>
         <div id="savedColorSchemes"></div>
     </div>
